# user_mng

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yaml  docker-compose.yaml
app/: pyproject.toml  user_mng.code-workspace
backend/: .gitignore  pyproject.toml  user_mng.code-workspace
backend/app/: main.py
backend/app/core/: config.py
